need ng book appoint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,13 @@
     <string name="open">Open Navigation</string>
     <string name="close">Close Navigation</string>
 
+    <string-array name="role_options">
+        <item>Select Role</item>
+        <item>Patient</item>
+        <item>Doctor</item>
+        <item>Nurse</item>
+        <item>Admin</item>
+    </string-array>
+
 
 </resources>
